# escola-api-drf

./: .flake8  .gitignore  README.md  pyproject.toml
escola/: admin.py  models.py  serializer.py  urls.py  validators.py  views.py
escola/migrations/: 0001_initial.py  0002_matricula.py  0003_alter_aluno_cpf.py
scripts/: populate_bd.py
setup/: settings.py  urls.py
