[tool.poetry]
name = "escola_api_drf"
version = "0.1.0"
description = "Projeto produzido na formação DRF do Alura."
authors = ["Danilo Costa <danilo.barbosa@fapce.edu.br>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.4"
flake8 = "^3.9.2"
black = "^21.6b0"
djangorestframework = "^3.12.4"
Markdown = "^3.3.4"
mypy = "^0.902"
safety = "^1.10.3"

[tool.poetry.dev-dependencies]

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
exclude = "setup/|manage.py|migrations/"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
